--- a/styles/creataccount.css
+++ b/styles/creataccount.css
@@ -5,7 +5,7 @@
     font-size: 12px;
 }
 .signi{
-    width: 25%;
+    width: 35%;
     margin: 70px auto 20px auto;
     padding: 20px;
     background-color:rgb(247, 243, 235);
@@ -49,4 +49,9 @@ button a {
     color: white;
     text-align: center;
     text-decoration: none;
+}
+@media (max-width: 800px) {
+    .signi{
+        width: 75%;
+    }
 }
